--- a/anime/style2.css
+++ b/anime/style2.css
@@ -11,13 +11,13 @@
     font-weight: normal;
 }
 body{
-    background-image: url(background.jpg);
+    background-image: url(background.png);
     background-color: rgb(31,31,31);
-    color: rgb(212, 212, 212);;
+    color: rgb(212, 212, 212);
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    background-size: contain;
+    background-size: cover;
 }
 img {
     -webkit-filter: opacity(30%); /* Chrome, Safari, Opera */
@@ -51,7 +51,7 @@ img{
     font-size: 30px;
     text-align: center;
     font-family: lolita;
-    margin-bottom: 610px
+    margin-bottom: 420px
 }
 .circle-container {
     width: fit-content;
