--- a/lottery/style.css
+++ b/lottery/style.css
@@ -70,3 +70,20 @@ table {
 .blue{
 	background-color: rgba(219,232,243,.7);
 }
+@media only screen and (max-width: 767px) {
+	body{
+		font-size: 38px;
+	}
+	.imgs{
+		max-width: 80px;
+	}
+	table{
+		min-width: 500px;
+	}
+	.font{
+		font-size: 32px;
+		position: relative;
+		top: -20px;
+		left: 46px;
+	}
+}
