--- a/lottery/style.css
+++ b/lottery/style.css
@@ -70,7 +70,7 @@ table {
 .blue{
 	background-color: rgba(219,232,243,.7);
 }
-@media only screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {
 	body{
 		font-size: 38px;
 	}
