--- a/anime/style2.css
+++ b/anime/style2.css
@@ -11,8 +11,8 @@
     font-weight: normal;
 }
 body{
-    /* background-image: url(background.png); */
-    background-color: rgb(31,31,31);
+    background-image: url(background-2.jpg);
+    /* background-color: rgb(31,31,31); */
     color: rgb(212, 212, 212);
     background-position: center;
     background-repeat: no-repeat;
@@ -51,7 +51,6 @@ img{
     font-size: 30px;
     text-align: center;
     font-family: lolita;
-    margin-bottom: 420px
 }
 .circle-container {
     width: fit-content;
